--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -3,7 +3,7 @@ html {
 }
 
 body {
-  margin: 0px
+  margin: 0px;
 }
 
 @keyframes topMove {
@@ -14,7 +14,7 @@ body {
 .top {
   background-color: black;
   color: white;    
-  padding: 5em;
+  padding: 3em;
   position: relative;
   text-align: center;
   font-family: 'Montserrat', sans-serif;
@@ -26,11 +26,6 @@ body {
 
 @media only screen and (max-width: 600px) {
   .top {
-    /*background-color: black;
-    color: white;
-    padding: 5em;
-    text-align: center;
-    font-family: 'Montserrat', sans-serif;*/
     padding: 1em;
     font-size: 0.8em;
   }
@@ -58,23 +53,26 @@ body {
     font-size: 1em;
     padding: 0em 2em 2em 2em;
   }
-
 }
 
-/*
 p {
-  max-width: 70%;
-  margin: auto;
+    background-image: -webkit-linear-gradient(left, #81BEF7, #F5DA81);
+    background-image:    -moz-linear-gradient(left, #81BEF7, #F5DA81);
+    background-image:     -ms-linear-gradient(left, #81BEF7, #F5DA81);
+    background-image:      -o-linear-gradient(left, #81BEF7, #F5DA81);
+    background-image:         linear-gradient(to right, #81BEF7, #F5DA81);
+    color:transparent;
+    -webkit-background-clip: text;
+    background-clip: text;
 }
-*/
 
-@keyframes LineOne {
+@keyframes LineAnimation {
   0% {left: 0px;}
-  20% {left: -400px; top: 0px;}
-  30% {top: -80px;}
-  40% {top: 0px; left: -400px;}
+  20% {left: -100px; top: 0px;}
+  30% {top: -30px;}
+  40% {top: 0px; left: -100px;}
   60% {left: 0px;}
-  80% {left: 400px}
+  80% {left: 100px}
   100% {left: 0px;}
 }
 
@@ -90,8 +88,8 @@ p {
 }
 
 .animationLineOne {
-  width: 20%;
-  height: 4px;
+  width: 50px;
+  height: 5px;
   margin-left: auto;
   margin-right: auto;
   margin-top: 0px;
@@ -99,16 +97,16 @@ p {
   border-radius: 30px;
   background: blue;
   position: relative;
-  animation-name: LineOne;
-  animation-duration: 10s;
+  animation-name: LineAnimation;
+  animation-duration: 5s;
   animation-timing-function: linear;
   animation-iteration-count: infinite;
   animation-delay: 2.2s;
 }
 
 .animationLineTwo {
-  width: 20%;
-  height: 4px;
+  width: 5px;
+  height: 50px;
   margin-left: auto;
   margin-right: auto;
   margin-top: 10px;
@@ -116,16 +114,16 @@ p {
   border-radius: 30px;
   background: red;
   position: relative;
-  animation-name: LineOne;
-  animation-duration: 10s;
+  animation-name: LineAnimation;
+  animation-duration: 5s;
   animation-timing-function: linear;
   animation-iteration-count: infinite;
-  animation-delay: 6.2s;
+  animation-delay: 4.2s;
 }
 
 .animationLineThree {
-  width: 20%;
-  height: 4px;
+  width: 5px;
+  height: 50px;
   margin-left: auto;
   margin-right: auto;
   margin-top: 10px;
@@ -133,16 +131,16 @@ p {
   border-radius: 30px;
   background: #42f47d;
   position: relative;
-  animation-name: LineOne;
-  animation-duration: 10s;
+  animation-name: LineAnimation;
+  animation-duration: 5s;
   animation-timing-function: linear;
   animation-iteration-count: infinite;
-  animation-delay: 4.2s;
+  animation-delay: 3.2s;
 }
 
 .animationLineFour {
-  width: 20%;
-  height: 4px;
+  width: 50px;
+  height: 5px;
   margin-left: auto;
   margin-right: auto;
   margin-top: 10px;
@@ -150,11 +148,11 @@ p {
   border-radius: 30px;
   background: #fcf93c;
   position: relative;
-  animation-name: LineOne;
-  animation-duration: 10s;
+  animation-name: LineAnimation;
+  animation-duration: 5s;
   animation-timing-function: linear;
   animation-iteration-count: infinite;
-  animation-delay: 8.2s;
+  animation-delay: 5.2s;
 }
 
 .aboutMeBorder {
@@ -170,7 +168,7 @@ p {
 
 }
 
-@keyframes stuff {
+@keyframes rollIn {
   0% {left: 1000px;}
   100% {left: 0px;}
 }
@@ -182,7 +180,7 @@ p {
   position: relative;
   /*padding-bottom: 3em;*/
   text-align: center;
-  animation-name: stuff;
+  animation-name: rollIn;
   animation-duration: 1.8s;
   animation-timing-function: ease-in-out;
 }
@@ -198,7 +196,7 @@ ul {
   padding-left: 0;
 }
 
-@keyframes linky {
+@keyframes linkRoll {
   0%  {left: -1000px;}
   100% {left: 0px;}
 }
@@ -211,7 +209,7 @@ span {
   border: 1px;
   border-style: solid;
   border-color: white;
-  animation-name: linky;
+  animation-name: linkRoll;
   animation-duration: 2s;
   animation-timing-function: ease-in-out;
 }
@@ -220,8 +218,6 @@ span {
   span {
     padding: 1em;
     font-size: 1em;
-
-
   }
 }
 
@@ -231,10 +227,16 @@ span {
 
 a:visited {
   color: lightblue;
+  text-decoration: none;
 }
 
 a:link {
   color: lightblue;
+  text-decoration: none;
+}
+
+a:hover {
+  color: #42e8f4;
   text-decoration: none;
 }
 
