--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -175,8 +175,8 @@ p {
 
 .leftSide {
   color: white;
-  padding: 2em;
-  font-size: 1.5em;
+  padding: 1em 2em 0.5em 2em;
+  font-size: 2em;
   position: relative;
   /*padding-bottom: 3em;*/
   text-align: center;
@@ -191,28 +191,16 @@ p {
   }
 }
 
-ul {
-  list-style: none;
-  padding-left: 0;
-}
-
 @keyframes linkRoll {
   0%  {left: -1000px;}
   100% {left: 0px;}
 }
 
-span {
-  position: relative;
-  padding: 1.5em;
-  /*text-align: center;*/
-  font-size: 1.5em;
-  border: 1px;
-  border-style: solid;
-  border-color: white;
-  animation-name: linkRoll;
-  animation-duration: 2s;
-  animation-timing-function: ease-in-out;
+@keyframes secondLinkRoll {
+  0% {left: -1200px;}
+  100% {left: -200px;}
 }
+
 
 @media only screen and (max-width: 600px) {
   span {
@@ -221,8 +209,24 @@ span {
   }
 }
 
-.itemWrapper {
-  text-align: center;
+ul {
+  display: flex;
+  justify-content: center;
+}
+
+ul li {
+  font-family: 'Noto Serif JP', sans-serif;
+  padding: 1em;
+  font-size: 1.5em;
+  margin-right: 50px;
+  position: relative;
+  animation-name: linkRoll;
+  animation-duration: 2s;
+  animation-timing-function: ease-in-out;
+  border: 1px;
+  border-style: solid;
+  border-color: white;
+  border-radius: 10px;
 }
 
 a:visited {
