--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -84,7 +84,7 @@ p {
 
 .delayDiv {
   animation-name: opacTime;
-  animation-duration: 2s;
+  animation-duration: 2.2s;
 }
 
 .animationLineOne {
@@ -101,7 +101,7 @@ p {
   animation-duration: 5s;
   animation-timing-function: linear;
   animation-iteration-count: infinite;
-  animation-delay: 2.2s;
+  animation-delay: 2.4s;
 }
 
 .animationLineTwo {
@@ -118,7 +118,7 @@ p {
   animation-duration: 5s;
   animation-timing-function: linear;
   animation-iteration-count: infinite;
-  animation-delay: 4.2s;
+  animation-delay: 4.4s;
 }
 
 .animationLineThree {
@@ -135,7 +135,7 @@ p {
   animation-duration: 5s;
   animation-timing-function: linear;
   animation-iteration-count: infinite;
-  animation-delay: 3.2s;
+  animation-delay: 3.4s;
 }
 
 .animationLineFour {
@@ -152,7 +152,7 @@ p {
   animation-duration: 5s;
   animation-timing-function: linear;
   animation-iteration-count: infinite;
-  animation-delay: 5.2s;
+  animation-delay: 5.4s;
 }
 
 .aboutMeBorder {
@@ -188,6 +188,7 @@ p {
 @media only screen and (max-width: 600px) {
   .leftSide {
     padding: 1em;
+    font-size: 1.5em;
   }
 }
 
@@ -201,21 +202,12 @@ p {
   100% {left: -200px;}
 }
 
-
-@media only screen and (max-width: 600px) {
-  span {
-    padding: 1em;
-    font-size: 1em;
-  }
-}
-
 ul {
   display: flex;
   justify-content: center;
 }
 
 ul li {
-  font-family: 'Noto Serif JP', sans-serif;
   padding: 1em;
   font-size: 1.5em;
   margin-right: 50px;
@@ -229,17 +221,47 @@ ul li {
   border-radius: 10px;
 }
 
-a:visited {
-  color: lightblue;
+@media only screen and (max-width: 600px) {
+  ul li {
+    padding: 1em 1em 1em 1em;
+    font-size: 1.2em;
+  }
+}
+
+.pro {
+  color: #f442e2;
+}
+
+.soc {
+  color: #4155f4;
+}
+
+a.pro:visited {
+  color: #f442e2;
   text-decoration: none;
 }
 
-a:link {
-  color: lightblue;
+a.pro:link {
+  color: #f442e2;
   text-decoration: none;
 }
 
-a:hover {
+a.soc:visited {
+  color: #4155f4;
+  text-decoration: none;
+}
+
+a.soc:link {
+  color: #4155f4;
+  text-decoration: none;
+}
+
+a.pro:hover {
+  color: #42e8f4;
+  text-decoration: none;
+}
+
+a.soc:hover {
   color: #42e8f4;
   text-decoration: none;
 }
