--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -228,6 +228,59 @@ ul li {
   }
 }
 
+@keyframes spin {
+  0% {transform: rotate(0deg); left: -5%;}
+  50% {transform: rotate(1440deg); left: 93%;}
+  100% {transform: rotate(0deg); left: -5%;}
+}
+
+.rotate {
+  height: 100px;
+  width: 50px;
+  position: absolute;
+  background: linear-gradient(red, blue);
+  animation: spin 32s linear infinite;
+  border-radius: 0px;
+  animation-delay: 4s;
+  left: -5%;
+  top: 35%;
+  opacity: 0.5;
+}
+
+
+@keyframes spinTwo {
+  0% {transform: rotate(90deg); left: -6%;}
+  50% {transform: rotate(1530deg); left: 91%;}
+  100% {transform: rotate(90deg); left: -6%;}
+}
+
+.rotateOne {
+  height: 100px;
+  width: 50px;
+  position: absolute;
+  background: linear-gradient(#fcf93c, #42f47d);
+  animation: spinTwo 32s linear infinite;
+  border-radius: 0px;
+  animation-delay: 2s;
+  left: -6%;
+  top: 45%;
+  opacity: 0.6;
+}
+
+@media only screen and (max-width: 600px) {
+  .rotate {
+    height: 50px;
+    width: 25px;
+    top: 23%;
+  }
+
+  .rotateOne {
+    height: 50px;
+    width: 25px;
+    top: 32%;
+  }
+}
+
 .pro {
   color: #f442e2;
 }
