--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -229,9 +229,9 @@ ul li {
 }
 
 @keyframes spin {
-  0% {transform: rotate(0deg); left: -5%;}
-  50% {transform: rotate(1440deg); left: 93%;}
-  100% {transform: rotate(0deg); left: -5%;}
+  0% {transform: rotate(0deg); left: -7%;}
+  50% {transform: rotate(1440deg); left: 96%;}
+  100% {transform: rotate(0deg); left: -7%;}
 }
 
 .rotate {
@@ -242,16 +242,16 @@ ul li {
   animation: spin 32s linear infinite;
   border-radius: 0px;
   animation-delay: 4s;
-  left: -5%;
+  left: -7%;
   top: 35%;
   opacity: 0.5;
 }
 
 
 @keyframes spinTwo {
-  0% {transform: rotate(90deg); left: -6%;}
-  50% {transform: rotate(1530deg); left: 91%;}
-  100% {transform: rotate(90deg); left: -6%;}
+  0% {transform: rotate(90deg); left: -10%;}
+  50% {transform: rotate(1530deg); left: 94%;}
+  100% {transform: rotate(90deg); left: -10%;}
 }
 
 .rotateOne {
@@ -262,22 +262,37 @@ ul li {
   animation: spinTwo 32s linear infinite;
   border-radius: 0px;
   animation-delay: 2s;
-  left: -6%;
+  left: -10%;
   top: 45%;
   opacity: 0.6;
 }
 
 @media only screen and (max-width: 600px) {
+
+  @keyframes spin {
+    0% {transform: rotate(0deg); left: -7%;}
+    50% {transform: rotate(1440deg); left: 90%;}
+    100% {transform: rotate(0deg); left: -7%;}
+  }
+
+
   .rotate {
     height: 50px;
     width: 25px;
-    top: 23%;
+    top: 200px;
+  }
+
+  @keyframes spinTwo {
+    0% {transform: rotate(90deg); left: -10%;}
+    50% {transform: rotate(1530deg); left: 88%;}
+    100% {transform: rotate(90deg); left: -10%;}
   }
 
   .rotateOne {
     height: 50px;
     width: 25px;
-    top: 32%;
+    top: 300px;
+    left: -10%;
   }
 }
 
