--- a/CSS/javaStyles.css
+++ b/CSS/javaStyles.css
@@ -7,36 +7,48 @@ body {
 }
 
 @keyframes headerRoll {
-	0% {left: -100%;}
+	0% {left: -10%;}
 	100% {left: 0%;}
 }
 
+@keyframes opacTop {
+  0% {opacity: 0;}
+  50% {opacity: 0;}
+  100% {opacity: 1;}
+}
+
+.top {
+	text-align: center;
+	animation-name: opacTop;
+	animation-duration: 1s;
+}
+
 h1 {
-	font-family: 'Montserrat', sans-serif;
+    font-family: 'Montserrat', sans-serif;
 	text-align: center;
 	font-size: 2em;
 	animation-name: headerRoll;
-	animation-duration: 2s;
+	animation-duration: 1.5s;
 	animation-timing-function: ease-in-out;
 	position: relative;
 	background-image: -webkit-linear-gradient(left, white, orange);
-  background-image:    -moz-linear-gradient(left, white, orange);
-  background-image:     -ms-linear-gradient(left, white, orange);
-  background-image:      -o-linear-gradient(left, white, orange);
-  background-image:         linear-gradient(to right, white, orange);
-  color:transparent;
-  -webkit-background-clip: text;
-  background-clip: text;
+    background-image:    -moz-linear-gradient(left, white, orange);
+    background-image:     -ms-linear-gradient(left, white, orange);
+    background-image:      -o-linear-gradient(left, white, orange);
+    background-image:         linear-gradient(to right, white, orange);
+    color:transparent;
+    -webkit-background-clip: text;
+    background-clip: text;
 }
 
 @keyframes linkRolling {
-	0% {top: 50px;}
+	0% {top: 25px;}
 	100% {top: 0px;}
 }
 
 @keyframes opacLink {
-	0% {opacity: 0}
-	50% {opacity: 0}
+	0% {opacity: 0;}
+	50% {opacity: 0;}
 	100% {opacity: 1;}
 }
 
@@ -44,7 +56,8 @@ h1 {
 	margin-top: 3em;
 	text-align: center;
 	animation-name: opacLink;
-	animation-duration: 3s;
+	animation-duration: 2.4s;
+	animation-delay: 
 }
 
 ul {
@@ -86,7 +99,7 @@ a:hover {
 
 @media only screen and (max-width: 650px) {
 	h1 {
-		font-size: 1.5em;
+		font-size: 1.4em;
 	}
 
 
