Edit index.html and styles.css to style Odin link

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -352,6 +352,18 @@ ul li {
   }
 }
 
+#odin:visited {
+  color: aqua;
+}
+
+#odin:link {
+  color: aqua;
+}
+
+#odin:hover {
+  color: blue;
+}
+
 .pro {
   color: #f442e2;
 }
