Edit index.html and styles.css
Added coding instructor position at Code With Us

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -352,15 +352,15 @@ ul li {
   }
 }
 
-#odin:visited {
+.odin:visited {
   color: aqua;
 }
 
-#odin:link {
+.odin:link {
   color: aqua;
 }
 
-#odin:hover {
+.odin:hover {
   color: blue;
 }
 
